<resources>
    <string name="app_name">SHFGIC Demo</string>

    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="logout">로그아웃</string>
    <string name="skip">건너뛰기</string>
    <string name="regist_finger">지문 등록하기</string>
    <string name="other_login">다른 로그인 수단</string>

    <string name="error_server">서버와의 연결상태가 원활하지 않습니다.\n잠시 후 다시 시도해 주십시오.</string>

    <string name="resultmsg_icid">통합아이디 미존재</string>
    <string name="resultmsg_icid_none">통합아이디 존재</string>
    <string name="resultmsg_device_not_allowed">지원 불가능한 단말입니다.</string>
    <string name="resultmsg_device_allowed">지원 가능한 단말입니다.</string>

    <string name="shfgic_list">신한통합인증서 목록</string>
    <string name="shfgic_isshfgic">신한통합인증서 보유여부</string>
    <string name="shfgic_allowed_authnr">지원가능 단말체크</string>
    <string name="shfgic_regist">신한통합인증 등록</string>
    <string name="shfgic_join">신한통합인증 가입</string>
    <string name="shfgic_login">신한통합인증 로그인</string>
    <string name="shfgic_login_finger">신한통합인증 지문으로 로그인</string>
    <string name="shfgic_find_password">신한통합인증 비밀번호를 잊어버리셨나요?</string>
    <string name="shfgic_expireDate">만료일 : %s</string>
    <string name="shfgic_login_success">신한통합인증으로 로그인되었습니다.</string>

    <string name="title_information_use">신한통합인증 이용 안내</string>
    <string name="title_information_finger">지문 이용 안내</string>
    <string name="title_information_password">비밀번호 이용 안내</string>
    <string name="title_terms">신한통합인증 약관 및 이용동의</string>
    <string name="title_password">신한통합인증 비밀번호 입력</string>
    <string name="title_password_re">신한통합인증 비밀번호 재입력</string>
    <string name="title_fingerprint">신한통합인증 지문 인증</string>
    <string name="title_join_complete">신한통합인증 가입 완료</string>

    <string name="title_intergrated_certification">로그인</string>
    <string name="title_password_confirm">신한통합인증 비밀번호 확인</string>
    <string name="title_termination">신한통합인증 해지</string>
    <string name="title_termination_info">신한통합인증 해지 안내</string>
    <string name="title_termination_complete">신한통합인증 해지 완료</string>
    <string name="title_suspension">신한통합인증 정지</string>
    <string name="title_suspension_info">신한통합인증 정지 안내</string>
    <string name="title_suspension_complete">신한통합인증 정지 완료</string>

    <string name="title_management">신한통합인증센터</string>
    <string name="title_issued">신한통합인증 가입/등록</string>
    <string name="title_termination_option">신한통합인증 해지/정지</string>
    <string name="title_pw_reset">신한통합인증 비밀번호 재설정</string>
    <string name="title_login_option">신한통합인증 로그인 설정</string>
    <string name="title_sso_app">신한통합인증 서비스 앱</string>

    <string name="termination_shfgic">신한통합인증</string>
    <string name="termination_option">전체해지</string>
    <string name="termination_option_desc"><![CDATA[
    통합인증 <font color=#3a7bd3>이용중인 앱<br/>전체</font> 사용안함
    ]]></string>
    <string name="suspension_option">이용정지</string>
    <string name="suspension_option_desc"><![CDATA[
    신한생명 <font color=#3a7bd3>\'스마트창구\'<br/>앱</font>에서만 사용안함
    ]]></string>
    <string name="termination_option_guide">신한통합인증 해지 또는 정지 후에도\n언제든지 서비스 가입/등록 가능합니다.</string>

    <string name="login_option_desc">신한통합인증 로그인 설정을 통해\n로그인 방식을 변경하실 수 있습니다.</string>
    <string name="login_option_password">신한통합인증 비밀번호</string>
    <string name="login_option_finger">신한통합인증 지문</string>

    <string name="password_reset_complete">신한통합인증 비밀번호 재설정이\n완료되었습니다.</string>
    <string name="password_reset_complete_2">변경하신 비밀번호로 다시 로그인하여\n이용해 주시기 바랍니다.</string>

    <string name="alert_management_issue">고객님께서는 이미 신한통합인증 서비스에 가입/등록이 되어 있습니다.</string>
    <string name="alert_fingerprint_changed">디바이스에 등록된 지문 정보가 변경되었습니다. 지문 인증으로 로그인하기 위해서는 지문을 다시 등록해 주셔야 이용 가능합니다.</string>
    <string name="alert_fingerprint_unregist">디바이스에 등록된 지문 정보가 없습니다. 지문 인증으로 로그인하기 위해서는 고객님의 디바이스에 지문을 먼저 등록하셔야 합니다. 통합인증 비밀번호로 로그인 하시겠습니까?</string>
    <string name="alert_intergrated_certi_login">통합인증 비밀번호를 재설정하시려면 통합인증으로 로그인 해주시기 바랍니다.</string>

    <string name="alert_suspension_login">통합인증 서비스를 이용 정지하시려면 로그인 해주시기 바랍니다.</string>
    <string name="alert_termination_login">통합인증 서비스를 해지하시려면 로그인 해주시기 바랍니다.</string>
    <string name="alert_termination_guide">신한통합인증 서비스가 해지되었습니다. 서비스를 다시 이용하시려면 신한통합인증 가입을 해주시기 바랍니다.</string>

    <string name="alert_join_regist">신한통합인증 서비스에 이미 가입되어 있습니다. 신한통합인증으로 로그인 하시겠습니까?</string>

    <string name="alert_login_unregist">신한통합인증 가입 정보가 없습니다. 신한통합인증 서비스를 이용하시려면 가입 또는 등록해 주시기 바랍니다.</string>
    <string name="alert_login_expire_before">신한통합인증 서비스 만기일이 %d일 남았습니다. 통합인증 서비스 이용기간을 연장하시겠습니까?</string>
    <string name="alert_login_expire_after">신한통합인증 서비스 만기일이 지났습니다. 통합인증 서비스를 가입해 주시기 바랍니다.</string>
    <string name="alert_login_termination">신한통합인증 서비스가 해지되었습니다. 서비스를 다시 이용하시려면 신한통합인증 가입을 해주시기 바랍니다.</string>
    <string name="alert_login_reregist">신한통합인증 서비스를 이용하시려면 통합인증 서비스를 등록해 주시기 바랍니다.</string>
    <string name="alert_login_cnt_auth_fail">신한통합인증 비밀번호가 일치하지 않습니다. (오류횟수: %d회)\n※ 누적 5회 오류 시 서비스가 잠금 처리됩니다.</string>
    <string name="alert_login_lock">신한통합인증 비밀번호 입력제한 횟수 초과로 인해 서비스가 잠금 상태가 되었습니다 통합인증 비밀번호 재설정 화면으로 이동하시겠습니까?</string>
    <string name="alert_regist_lock">신한통합인증 비밀번호 입력제한 횟수 초과로 인해 서비스가 잠금 상태가 되었습니다. 통합인증 잠금 해제 가능한 앱에서 비밀번호 재설정 해주시기 바랍니다.</string>

    <string name="alert_changed_login_setting_login">통합인증 로그인 설정을 변경하시려면 통합인증으로 로그인 해주시기 바랍니다.</string>
    <string name="alert_changed_login_setting_fingerprint">신한통합인증 지문이 등록되어 있지 않습니다.\n신한통합인증 로그인을 지문으로 설정하시겠습니까?</string>
    <string name="alert_changed_login_setting">신한통합인증 로그인 설정이 변경되었습니다.\n변경하신 로그인 수단으로 다시 로그인 해주세요.</string>
    <string name="alert_changed_login_setting_fingerprint_complete">신한통합인증 지문 등록이 완료되었습니다.\n변경하신 로그인 수단으로 다시 로그인 해주세요.</string>

    <string name="title_esign">전자서명</string>
    <string name="enter_fingerprint_esign">신한통합인증 지문 입력</string>

    <string name="finger_reregi_complete">신한통합인증 지문 재등록 처리가 완료되었습니다.</string>

    <string name="sso_message_choose_app">신한통합인증 서비스 이용을 위해 이동하고자 하는 앱을 선택해 주세요.</string>
    <string name="sso_message_additional">통합인증 서비스 가입 또는 이용 등록 완료한 신한금융그룹사 모바일 앱에서 이용 가능합니다.</string>
    <string name="sso_appname_bank">신한 쏠\n(SOL)</string>
    <string name="sso_appname_card">신한 FAN\n(앱카드)</string>
    <string name="sso_appname_investment">신한금융투자</string>
    <string name="sso_appname_insurance">스마트창구</string>
    <string name="sso_ic_status_suspension">신한통합인증 서비스 이용 정지 상태입니다. 서비스를 다시 이용하시려면 신한통합인증 이용 등록을 해주시기 바랍니다.</string>

    <!-- PC to App -->
    <string name="title_pctoapp">신한통합인증 PC 인증</string>
    <string name="pctoapp_qrcode_scan_guide">신한금융그룹사 PC 화면의 QR을\n아래 영역에 인식시켜 주세요.</string>
    <string name="alert_pctoapp_qrcode_scan">QR 스캔이 완료되었습니다. 신한통합인증 PC 인증을 위한 비밀번호 또는 지문 인증 방식을 선택해 주세요.</string>
    <string name="alert_pctoapp_qrcode_scan_password">QR 스캔이 완료되었습니다.</string>
    <string name="pctoapp_auth_success">신한통합인증이 확인되었습니다. PC화면의 QR 팝업창에서 확인 버튼을 눌러주세요.</string>
    <string name="password_confirm">비밀번호 확인</string>
    <string name="fingerprint_auth">지문인증</string>

    <!-- Demo용 -->
    <string name="title_main">신한통합인증 Demo</string>
    <string name="select_company">그룹사 선택</string>
    <string name="select_server">서버 선택</string>
    <string name="select_ci">CI 선택</string>
    <string name="select_loginyn">로그인 여부</string>

    <string name="title_auth">본인인증</string>
    <string name="title_auth_add">추가 본인인증</string>
    <string name="auth_complete">인증완료</string>
    <string name="terms_complete">약관동의</string>

    <string name="finger_print_guide_regist">지문 등록을 위해\n지문 영역을 터치해 주세요.</string>
    <string name="finger_print_guide">지문 인증을 위해\n지문 영역을 터치해 주세요.</string>
    <string name="finger_print">지문 인증 센서에\n지문을 인식시켜 주세요.</string>
    <string name="finger_print_desc">지문을 나중에 등록하실 경우,\n신한통합인증 로그인 설정에서 등록 가능합니다.</string>

    <string name="login_password_info">신한통합인증 비밀번호 6자리 숫자를 입력해 주세요.</string>
    <string name="password_info">비밀번호 6자리 숫자를 입력해 주세요.</string>
    <string name="passwordre_info">비밀번호 6자리 숫자를 다시 입력해 주세요.</string>
    <string name="password_explanation_line1">다른 신한금융그룹사 앱에서</string>
    <string name="password_explanation_line2">신한통합인증을 이용중인 고객님께서는</string>
    <string name="password_explanation_line3">최초 가입시 등록한 비밀번호를 입력해 주시기 바랍니다.</string>

    <!-- OnePass Fido 지문 관련 설정 -->
    <string name="oms_cancel">취소</string>
    <string name="fingerprint_description">지문을 사용하여 인증 하세요. </string>
    <string name="fingerprint_hint">지문 인증 센서에 지문을 인식시켜 주세요.</string>
    <string name="fingerprint_not_recognized">지문이 일치하지 않습니다. 다시 시도하세요</string>
    <string name="fingerprint_success">지문이 확인되었습니다 </string>

    <!-- 보안키패드 -->
    <string name="password_min_message">비밀번호 6자리를 모두 입력하세요!</string>
    <string name="password_max_message">비밀번호 6자가 모두 입력되었습니다.</string>
    <string name="password_not_identical">비밀번호가 일치하지 않습니다!</string>
</resources>
