<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".view.join.JoinFingerPrintActivity">

    <include layout="@layout/include_top" />

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@+id/layoutTop"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:fontFamily="@font/oneshinhanmedium"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/finger_print_guide"
            android:textColor="#262626"
            android:textSize="20dp"
            tools:ignore="Suspicious0dp" />

        <ImageView
            android:id="@+id/ivFinger"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:gravity="center"
            android:src="@drawable/img_fprint" />

        <TextView
            android:id="@+id/tvFingerDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:fontFamily="@font/oneshinhanlight"
            android:gravity="center"
            android:lineSpacingExtra="5dp"
            android:text="@string/finger_print_desc"
            android:textColor="#666666"
            android:textSize="14dp"
            tools:ignore="Suspicious0dp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_confirm_wh_x"
                android:fontFamily="@font/oneshinhanlight"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#161c34"
                android:textSize="15dp"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@drawable/btn_confirm_navy_x"
                android:fontFamily="@font/oneshinhanlight"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="15dp"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
