<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#efefef"
    tools:context=".view.join.InformationUseActivity">

    <include layout="@layout/include_top" />

    <LinearLayout
        android:id="@+id/layoutMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/layoutBottom"
        android:layout_below="@+id/layoutTop"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="21dp"
            android:layout_marginTop="27dp"
            android:fontFamily="@font/oneshinhanlight"
            android:gravity="center"
            android:text="@string/login_option_desc"
            android:textColor="#666666"
            android:textSize="14dp" />

        <LinearLayout
            android:id="@+id/option_password"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOptionPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/oneshinhanmedium"
                android:text="@string/login_option_password"
                android:textColor="#262626"
                android:textSize="16dp"
                tools:ignore="Suspicious0dp" />

            <ImageView
                android:id="@+id/ivOptionPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:src="@drawable/radio" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/option_finger"
            android:layout_width="match_parent"
            android:layout_height="68dp"
            android:layout_marginTop="5dp"
            android:background="#ffffff"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvOptionFinger"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="18dp"
                android:layout_weight="1"
                android:fontFamily="@font/oneshinhanmedium"
                android:text="@string/login_option_finger"
                android:textColor="#262626"
                android:textSize="16dp"
                tools:ignore="Suspicious0dp" />

            <ImageView
                android:id="@+id/ivOptionFinger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="18dp"
                android:src="@drawable/radio" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutBottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="23dp"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="23dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnCancel"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@drawable/btn_confirm_wh_x"
                android:fontFamily="@font/oneshinhanlight"
                android:gravity="center"
                android:text="@string/cancel"
                android:textColor="#161c34"
                android:textSize="15dp"
                tools:ignore="Suspicious0dp" />

            <TextView
                android:id="@+id/btnConfirm"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_weight="1"
                android:background="@drawable/btn_confirm_navy_x"
                android:fontFamily="@font/oneshinhanlight"
                android:gravity="center"
                android:text="@string/confirm"
                android:textColor="#ffffff"
                android:textSize="15dp"
                tools:ignore="Suspicious0dp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
